# chess-bot

./: .gitignore  CMakeLists.txt  INSTALL_SFML.md  Makefile  README.md  apt_requirements.txt  chess.cpp  chess.cpp.backup  chess.h  chess.h.backup  chess_engine.cpp  chess_engine.h  chess_gui.cpp  chess_gui.h  chess_uci  compile_gui.bat  example.cpp  main.cpp  match_runner.py  run.bat  run.sh  test_quick.bat
